exits and actions
Rooms now manages navigation buttons properly

--- a/js/app/resources/app.json
+++ b/js/app/resources/app.json
@@ -1,6 +1,6 @@
 {
 	"gameTitle" : "TXTVENTURE Test Dungeon",
-	"defaultConsole": "console",
-	"navPanel" : "navButtonPanel"
+	"console": "console",
+	"locations" : "locationsPanel"
 
 }
